--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulaski County, VA</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.css" />
     <style>
         body {
             margin: 0;
@@ -52,7 +51,7 @@
             font-family: Arial, sans-serif;
         }
         #map {
-            height: calc(100vh - 230px);
+            height: calc(100vh - 130px);
         }
         #header {
             height: 40px;
@@ -63,6 +62,16 @@
             font-size: 24px;
             font-weight: bold;
         }
+        #tract-selector {
+            height: 40px;
+            background: #f8f8f8;
+            padding: 10px;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-bottom: 1px solid #ccc;
+        }
         #filter-bar {
             height: 50px;
             background: #f8f8f8;
@@ -71,32 +80,6 @@
             display: flex;
             align-items: center;
             justify-content: center;
-        }
-        #slider-bar {
-            height: 50px;
-            background: #f0f0f0;
-            padding: 10px;
-            text-align: center;
-        }
-        #oz-table {
-            height: 50px;
-            background: #fff;
-            padding: 10px;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            border-top: 1px solid #ccc;
-            overflow: auto;
-        }
-        #oz-table table {
-            margin: 0 auto;
-            border-collapse: collapse;
-        }
-        #oz-table th, #oz-table td {
-            padding: 5px 10px;
-            border: 1px solid #ccc;
-        }
-        #oz-table th {
-            background: #f8f8f8;
         }
         #links {
             height: 40px;
@@ -112,16 +95,39 @@
             color: #0066cc;
             text-decoration: none;
         }
+#income-table {
+    height: 80px;
+    background: #fff;
+    padding: 10px;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    border-top: 1px solid #ccc;
+}
+#income-table table {
+    margin: 0 auto;
+    border-collapse: collapse;
+    font-size: 14px;
+}
+#income-table th, #income-table td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: center;
+}
+#income-table th {
+    background: #f8f8f8;
+    font-weight: bold;
+}
+
         #links a:hover {
             text-decoration: underline;
         }
-        #filter-bar label {
+        #filter-bar label, #tract-selector label {
             margin: 0 15px;
             font-size: 14px;
             display: flex;
             align-items: center;
         }
-        #hoct-filter, #ffiec-filter {
+        #hoct-filter, #ffiec-filter, #tract-filter {
             margin-left: 5px;
             padding: 5px;
             font-family: Arial, sans-serif;
@@ -148,7 +154,9 @@
             position: absolute;
             background-color: white;
             min-width: 300px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            max-height: 300px;
+            overflow-y: auto;
+            box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
             z-index: 1000;
             border: 1px solid #ccc;
             border-radius: 3px;
@@ -202,7 +210,25 @@
 </head>
 <body>
     <div id="header">Pulaski County, VA</div>
+    <div id="tract-selector">
+        <label>Tract: 
+            <select id="tract-filter">
+                <option value="All">Select Tract</option>
+                <option value="2101.01">2101.01</option>
+                <option value="2101.02">2101.02</option>
+                <option value="2102.01">2102.01</option>
+                <option value="2102.02">2102.02</option>
+                <option value="2103.00">2103.00</option>
+                <option value="2104.01">2104.01</option>
+                <option value="2104.02">2104.02</option>
+                <option value="2105.00">2105.00</option>
+                <option value="2106.00">2106.00</option>
+                <option value="2107.00">2107.00</option>
+            </select>
+        </label>
+    </div>
     <div id="filter-bar">
+        <label><input type="checkbox" id="oz-filter"> OZ</label>
         <label><input type="checkbox" id="qct-filter"> QCT</label>
         <label><input type="checkbox" id="dda-filter"> DDA</label>
         <label>HOCT: 
@@ -235,6 +261,7 @@
                     <a href="https://ajaim092.github.io/fauquiercounty/" target="_blank">Fauquier County</a>
                     <a href="https://ajaim092.github.io/floydmap/" target="_blank">Floyd County</a>
                     <a href="https://ajaim092.github.io/frederickcounty/" target="_blank">Frederick County</a>
+                    <a href="https://ajaim092.github.io/graysoncounty/" target="_blank">Grayson County</a>
                     <a href="https://ajaim092.github.io/leecounty/" target="_blank">Lee County</a>
                     <a href="https://ajaim092.github.io/manassas/" target="_blank">Manassas City</a>
                     <a href="https://ajaim092.github.io/pagecounty/" target="_blank">Page County</a>
@@ -244,6 +271,7 @@
                     <a href="https://ajaim092.github.io/russellcounty/" target="_blank">Russell County</a>
                     <a href="https://ajaim092.github.io/scottcounty/" target="_blank">Scott County</a>
                     <a href="https://ajaim092.github.io/shenandoahcounty/" target="_blank">Shenandoah County</a>
+                    <a href="https://ajaim092.github.io/smythcounty/" target="_blank">Smyth County</a>
                     <a href="https://ajaim092.github.io/tazewellcounty/" target="_blank">Tazewell County</a>
                     <a href="https://ajaim092.github.io/warrencounty/" target="_blank">Warren County</a>
                     <a href="https://ajaim092.github.io/washingtoncounty/" target="_blank">Washington County</a>
@@ -252,23 +280,26 @@
             </div>
         </label>
     </div>
-    <div id="slider-bar">
-        <label for="poverty-range">Poverty Rate (%): <span id="range-value">0.0 - 55.0</span></label>
-        <div id="poverty-range"></div>
-    </div>
     <div id="map"></div>
-    <div id="oz-table">
-        <table>
-            <tr><th>Opportunity Zone Tracts</th></tr>
-            <tr><td>2103.00</td></tr>
-        </table>
-    </div>
+<div id="income-table">
+    <table>
+        <tr>
+            <th>State Area Median Income</th>
+            <th>Locality Area Median Income</th>
+            <th>Community Type</th>
+        </tr>
+        <tr>
+            <td>$78,100</td>
+            <td>$85,700</td>
+            <td>High-Income Jurisdiction</td>
+        </tr>
+    </table>
+</div>
     <div id="links">
-        <a href="https://www.huduser.gov/portal/datasets/fmr/fmrs/FY2025_code/2025summary.odn?&year=2025&fmrtype=&selection_type=county&fips=5115599999" target="_blank">2025 Fair Market Rents (FMRs)</a>
+        <a href="https://www.huduser.gov/portal/datasets/fmr/fmrs/FY2025_code/2025summary.odn?&year=2025&fmrtype=Final&selection_type=county&fips=5115599999" target="_blank">2025 Fair Market Rents (FMRs)</a>
         <a href="https://www.huduser.gov/portal/datasets/il/il2025/2025summary.odn?STATES=51.0&INPUTNAME=METRO13980N51155*5115599999%2BPulaski+County&statelist=&stname=Virginia&wherefrom=&statefp=51&year=2025&ne_flag=&selection_type=county&incpath=&data=2025&SubmitButton=View+County+Calculations" target="_blank">2025 Income Limits</a>
     </div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
     <script>
         var gk_isXlsx = false;
         var gk_xlsxFileLookup = {};
@@ -341,8 +372,8 @@
 
         L.geoJSON(countyBoundary, {
             style: {
-                color: 'blue',
-                weight: 2,
+                color: 'black',
+                weight: 2.5,
                 opacity: 0.8,
                 fillColor: '#666',
                 fillOpacity: 0.1
@@ -361,8 +392,7 @@
                 oz: "NO",
                 poverty: 5.1,
                 ffiec: "Mixed",
-                hoct: "YES",
-                popup: "<b>Census Tract 2101.01</b><br>Centroid: 37.1623706, -80.5851911<br>QCT: NO<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 5.1%"
+                popup: "<b>Census Tract 2101.01</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: YES (3-10%)<br>Opportunity Zone: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 5.1%"
             },
             {
                 name: "2101.02",
@@ -372,8 +402,7 @@
                 oz: "NO",
                 poverty: 9.8,
                 ffiec: "Mixed",
-                hoct: "YES",
-                popup: "<b>Census Tract 2101.02</b><br>Centroid: 37.1788235, -80.6581627<br>QCT: NO<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 9.8%"
+                popup: "<b>Census Tract 2101.02</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: YES (3-10%)<br>Opportunity Zone: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 9.8%"
             },
             {
                 name: "2102.01",
@@ -383,8 +412,7 @@
                 oz: "NO",
                 poverty: 27.5,
                 ffiec: "Mixed",
-                hoct: "NO",
-                popup: "<b>Census Tract 2102.01</b><br>Centroid: 37.0580378, -80.7547999<br>QCT: YES<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 27.5%"
+                popup: "<b>Census Tract 2102.01</b><br>Qualified Census Tract: YES<br>Difficult Development Area: NO<br>High Opportunity Census Tract: NO<br>Opportunity Zone: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 27.5%"
             },
             {
                 name: "2102.02",
@@ -394,8 +422,7 @@
                 oz: "NO",
                 poverty: 12.3,
                 ffiec: "Mixed",
-                hoct: "NO",
-                popup: "<b>Census Tract 2102.02</b><br>Centroid: 37.1307307, -80.7637511<br>QCT: NO<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 12.3%"
+                popup: "<b>Census Tract 2102.02</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: NO<br>Opportunity Zone: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 12.3%"
             },
             {
                 name: "2103.00",
@@ -405,8 +432,7 @@
                 oz: "YES",
                 poverty: 11.6,
                 ffiec: "Mixed",
-                hoct: "YES",
-                popup: "<b>Census Tract 2103.00</b><br>Centroid: 37.0745522, -80.844665<br>QCT: NO<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 11.6%"
+                popup: "<b>Census Tract 2103.00</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: YES (10-12%)<br>Opportunity Zone: YES<br>FFIEC: Mixed<br>Poverty Rate (2023): 11.6%"
             },
             {
                 name: "2104.01",
@@ -416,8 +442,7 @@
                 oz: "NO",
                 poverty: 31.9,
                 ffiec: "Mixed",
-                hoct: "NO",
-                popup: "<b>Census Tract 2104.01</b><br>Centroid: 37.0172097, -80.7892379<br>QCT: NO<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 31.9%"
+                popup: "<b>Census Tract 2104.01</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: NO<br>Opportunity Zone: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 31.9%"
             },
             {
                 name: "2104.02",
@@ -427,8 +452,7 @@
                 oz: "NO",
                 poverty: 1.7,
                 ffiec: "Rural",
-                hoct: "YES",
-                popup: "<b>Census Tract 2104.02</b><br>Centroid: 36.9859855, -80.7490871<br>QCT: NO<br>DDA: NO<br>FFIEC: Rural<br>Poverty Rate (2023): 1.7%"
+                popup: "<b>Census Tract 2104.02</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: YES (<3%)<br>Opportunity Zone: NO<br>FFIEC: Rural<br>Poverty Rate (2023): 1.7%"
             },
             {
                 name: "2105.00",
@@ -438,8 +462,7 @@
                 oz: "NO",
                 poverty: 18.9,
                 ffiec: "Rural",
-                hoct: "NO",
-                popup: "<b>Census Tract 2105.00</b><br>Centroid: 36.9787919, -80.6500576<br>QCT: NO<br>DDA: NO<br>FFIEC: Rural<br>Poverty Rate (2023): 18.9%"
+                popup: "<b>Census Tract 2105.00</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: NO<br>Opportunity Zone: NO<br>FFIEC: Rural<br>Poverty Rate (2023): 18.9%"
             },
             {
                 name: "2106.00",
@@ -449,8 +472,7 @@
                 oz: "NO",
                 poverty: 15.1,
                 ffiec: "Mixed",
-                hoct: "NO",
-                popup: "<b>Census Tract 2106.00</b><br>Centroid: 37.0844385, -80.6426861<br>QCT: NO<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 15.1%"
+                popup: "<b>Census Tract 2106.00</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: NO<br>Opportunity Zone: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 15.1%"
             },
             {
                 name: "2107.00",
@@ -460,8 +482,7 @@
                 oz: "NO",
                 poverty: 14.9,
                 ffiec: "Mixed",
-                hoct: "NO",
-                popup: "<b>Census Tract 2107.00</b><br>Centroid: 37.1096109, -80.6814369<br>QCT: NO<br>DDA: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 14.9%"
+                popup: "<b>Census Tract 2107.00</b><br>Qualified Census Tract: NO<br>Difficult Development Area: NO<br>High Opportunity Census Tract: NO<br>Opportunity Zone: NO<br>FFIEC: Mixed<br>Poverty Rate (2023): 14.9%"
             }
         ];
 
@@ -475,23 +496,30 @@
 
         function updateMarkers() {
             markerLayer.clearLayers();
+            var ozFilter = document.getElementById("oz-filter").checked;
             var qctFilter = document.getElementById("qct-filter").checked;
             var ddaFilter = document.getElementById("dda-filter").checked;
             var hoctFilter = document.getElementById("hoct-filter").value;
             var ffiecFilter = document.getElementById("ffiec-filter").value;
-            var slider = document.getElementById("poverty-range");
-            var [minPoverty, maxPoverty] = slider.noUiSlider.get();
+            var tractFilter = document.getElementById("tract-filter").value;
+
             tracts.forEach(function(tract) {
                 var showMarker = true;
-                if (qctFilter && !(tract.qct === "YES" && tract.dda !== "YES")) showMarker = false;
-                if (ddaFilter && !(tract.dda === "YES" && tract.qct !== "YES")) showMarker = false;
-                if (hoctFilter !== "All") {
-                    if (hoctFilter === "12-10" && !(tract.poverty < 12 && tract.poverty >= 10)) showMarker = false;
-                    if (hoctFilter === "10-3" && !(tract.poverty < 10 && tract.poverty >= 3)) showMarker = false;
-                    if (hoctFilter === "3-0" && !(tract.poverty < 3)) showMarker = false;
+
+                if (tractFilter !== "All") {
+                    showMarker = tract.name === tractFilter;
+                } else {
+                    if (ozFilter && tract.oz !== "YES") showMarker = false;
+                    if (qctFilter && tract.qct !== "YES") showMarker = false;
+                    if (ddaFilter && tract.dda !== "YES") showMarker = false;
+                    if (hoctFilter !== "All") {
+                        if (hoctFilter === "12-10" && !(tract.poverty < 12 && tract.poverty >= 10)) showMarker = false;
+                        if (hoctFilter === "10-3" && !(tract.poverty < 10 && tract.poverty >= 3)) showMarker = false;
+                        if (hoctFilter === "3-0" && !(tract.poverty < 3)) showMarker = false;
+                    }
+                    if (ffiecFilter !== "All" && tract.ffiec !== ffiecFilter) showMarker = false;
                 }
-                if (ffiecFilter !== "All" && tract.ffiec !== ffiecFilter) showMarker = false;
-                if (tract.poverty < minPoverty || tract.poverty > maxPoverty) showMarker = false;
+
                 if (showMarker) {
                     var marker = L.marker(tract.centroid, {
                         icon: L.divIcon({
@@ -508,41 +536,37 @@
             });
         }
 
-        var slider = document.getElementById("poverty-range");
-        noUiSlider.create(slider, {
-            start: [0, 55],
-            range: {
-                'min': 0,
-                'max': 55
-            },
-            step: 0.1,
-            connect: true
-        });
-
-        slider.noUiSlider.on("update", function(values, handle) {
-            var minValue = values[0];
-            var maxValue = values[1];
-            document.getElementById("range-value").textContent = minValue + " - " + maxValue;
-            updateMarkers();
-        });
-
-        updateMarkers();
+        document.getElementById("oz-filter").addEventListener("change", updateMarkers);
         document.getElementById("qct-filter").addEventListener("change", updateMarkers);
         document.getElementById("dda-filter").addEventListener("change", updateMarkers);
         document.getElementById("hoct-filter").addEventListener("change", updateMarkers);
         document.getElementById("ffiec-filter").addEventListener("change", updateMarkers);
+        document.getElementById("tract-filter").addEventListener("change", function(e) {
+            var selected = e.target.value;
+            if (selected === "All") {
+                map.setView([37.0633853, -80.7134439], 11);
+            } else {
+                var tract = tracts.find(t => t.name === selected);
+                if (tract) {
+                    map.setView(tract.centroid, 13);
+                }
+            }
+            updateMarkers();
+        });
 
         var legend = L.control({ position: "bottomright" });
         legend.onAdd = function(map) {
             var div = L.DomUtil.create("div", "leaflet-control-legend");
             div.innerHTML = `
-                <div class="legend-item"><span class="legend-color" style="background: yellow;"></span>QCT</div>
-                <div class="legend-item"><span class="legend-color" style="background: red;"></span>DDA</div>
-                <div class="legend-item"><span class="legend-color" style="background: blue;"></span>Census Tract</div>
+        <div class="legend-item"><span class="legend-color" style="background: yellow;"></span>Qualified Census Tract (QCT)</div>
+        <div class="legend-item"><span class="legend-color" style="background: red;"></span>Difficult Development Area (DDA)</div>
+        <div class="legend-item"><span class="legend-color" style="background: blue;"></span>Census Tract</div>
             `;
             return div;
         };
         legend.addTo(map);
+
+        updateMarkers();
     </script>
 </body>
 </html>
